# variable-length-flow-policy

./: .gitignore  README.md  conda_environment.yaml  eval.py  gather_rollouts.py  get_action_loss_train.py  hsic.py  mlp_correlation.py  requirements.txt  rewrite_with_embeddings.py  rollouts_via_policy.py  run_gather_rollouts.sh  train.py  train_rollouts.sh  training_commands.md  transformer_eval.sh  transformer_history.sh
diffusion_policy/: record_sim_episodes_aloha.py
diffusion_policy/common/: noise_sampler.py  sampler.py
diffusion_policy/config/: train_diffusion_transformer_hybrid_workspace.yaml  train_diffusion_transformer_lowdim_kitchen_workspace.yaml  train_diffusion_transformer_lowdim_pusht_workspace.yaml  train_diffusion_transformer_real_hybrid_workspace.yaml
diffusion_policy/dataset/: robomimic_replay_action_dataset.py  robomimic_replay_image_dataset.py
diffusion_policy/env_runner/: aloha_image_runner.py  pusht_image_runner.py  robomimic_image_runner.py  robomimic_longhist_image_runner.py  robomimic_square_long_image_runner.py
experiment_configs/: transformer_pusht.yaml  transformer_pusht_emb.yaml
perturbs/: chunk_1.yaml  chunk_2.yaml  chunk_4.yaml  chunk_8.yaml
rollouts/: merge_actions.py
sagemaker/: README.md  launcher.py  train.py  util.py
sagemaker/docker/: .dockerignore  BUILD.bazel  Dockerfile  README.md  build_and_push_image.sh  build_and_run_local.sh
sagemaker/docker/24.04/: Dockerfile  LICENSE.Dockerfile  NOTICE  README.md  build_and_push_base_image.sh
sagemaker/docker/test/: docker_dependency_test.py
(+67 files in other folders)
